[package]
name = "humhub-server"
version = "1.0.0"
edition = "2021"

[dependencies.ssh2]
version = "0.9.4"

[dependencies.trust-dns-resolver]
version = "0.23.2"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.115"

[dependencies.reqwest]
version = "0.12.2"

[dependencies.webdriver-client]
version = "0.2.5"

[dependencies.zip]
version = "0.6.6"
